--- a/L02/Lektion02/eventinsp.css
+++ b/L02/Lektion02/eventinsp.css
@@ -4,6 +4,7 @@ html {
 
 h1 {
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #div0 {
@@ -15,6 +16,7 @@ h1 {
     margin-top: 120px;
     margin-left: 150px;
     background-color: white;
+    border-radius: 40px;
 }
 
 #div1 {
@@ -26,6 +28,7 @@ h1 {
     margin-right: 150px;
     margin-top: 120px;
     background-color: white;
+    border-radius: 40px;
 }
 
 span {
@@ -34,5 +37,16 @@ span {
     width: 300px;
     height: 200px;
     background-color: rgb(12, 83, 76);
+    border-radius: 20px;
     
+}
+
+button {
+    background-color: rgb(12, 83, 76);
+    color: white;
+    border-color: rgb(12, 83, 76);
+    border-radius: 20px;
+    padding: 2%;
+    margin-left: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 }
