--- a/L03/shopping.css
+++ b/L03/shopping.css
@@ -1,34 +1,40 @@
 body {
-    background-color: rgb(41, 113, 89);
+    background-color: rgb(43, 126, 114);
     text-align: center;
-    background-repeat: no-repeat, repeat;
-    background-size: cover;
+
 }
 
 h1 {
     color: rgb(251, 251, 251);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
     height: 100px;
     margin: 0px;
     padding-top: 60px;
+    text-transform: uppercase;
 }
 
 h2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .wrapper {
-    margin: auto;
-    width: 532px;
+    text-align: center;
+    position: relative;
+    width: 1600px;
+    left: 52%;
+    transform: translateX(-50%);
 }
 
 
+
+#counterItem {
+    color: rgb(85,107,47);
+}
+
 #toDo {
     width: 400px;
-    height: 55px;
-    font-size: 15px;
+    height: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
@@ -45,25 +51,45 @@ h2 {
     height: 30px;
     text-align: center;
     position: relative;
-    left: 50%;
+    left: 51%;
     transform: translateX(-50%);
     display: flex;
     justify-content: space-between;
+    border-style: solid;
+    border-color: rgb(99, 99, 99);
     outline: none;
 }
 
 .fa-trash-alt {
-    opacity: 10%;
+    opacity: 60%;
     font-size: 20px;
-    color: black;
-    cursor: pointer;
+    color: black
+   
 
 }
 
 .fa-trash-alt:hover {
+    cursor: pointer;
     opacity: 100%;
 }
 
-.checkbox {
+.checkBox {
     cursor: pointer;
+}
+
+.container {
+
+    padding: 20px;
+    align-items: center;
+    background-color: white;
+    width: 364px;
+    height: 30px;
+    position: relative;
+    left: 586px;
+   
+    display: flex;
+    justify-content: space-between;
+    border-style: solid;
+    border-color: rgb(99, 99, 99);
+    outline: none;
 }
