--- a/L04/L04.css
+++ b/L04/L04.css
@@ -1,96 +1,109 @@
-body {
-    background-color: rgb(43, 126, 114);
+.container {
+    border-radius: 25px;
+    height: 700px;
+    width: 390px;
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: rgb(45, 115, 112);
+    justify-content: center;
     text-align: center;
+    float: left;
+}
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
 }
 
 h1 {
-    color: rgb(251, 251, 251);
+    position: relative;
+    left: 65px;
+    top: 25px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    height: 100px;
-    margin: 0px;
-    padding-top: 60px;
-    text-transform: uppercase;
+    border-width: 2px;
+    width: 250px;
+    height: 35px;
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
-.wrapper {
-    text-align: center;
+    font-size: small;
     position: relative;
-    width: 1600px;
-    left: 52%;
-    transform: translateX(-50%);
-}
-
-
-
-#counterItem {
-    color: rgb(85,107,47);
-}
-
-#toDo {
-    width: 400px;
-    height: 30px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-
-.divLabel {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.todoItem {
-    padding: 20px;
-    align-items: center;
-    background-color: white;
-    width: 364px;
-    height: 30px;
-    text-align: center;
-    position: relative;
-    left: 51%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
-    border-style: solid;
-    border-color: rgb(99, 99, 99);
-    outline: none;
-}
-
-.fa-trash-alt {
-    opacity: 60%;
-    font-size: 20px;
-    color: black
-   
-
-}
-
-.fa-trash-alt:hover {
+    font-weight:500;
     cursor: pointer;
-    opacity: 100%;
+    top: 20px;
+    border: solid black;
+    border-radius: 20px;
 }
 
-.checkBox {
-    cursor: pointer;
-}
 
-.container {
-
-    padding: 20px;
-    align-items: center;
-    background-color: white;
-    width: 364px;
-    height: 30px;
+h3 {
+    font-size: small;
     position: relative;
-    left: 586px;
-   
-    display: flex;
-    justify-content: space-between;
-    border-style: solid;
-    border-color: rgb(99, 99, 99);
-    outline: none;
+    top: -15px;
+    font-weight:500;
+}
+
+fieldset {
+    border: none;
+    position: relative;
+    top: 20px;
+}
+
+textarea {
+    width: 150px;
+}
+
+.item {
+    width: 150px;
+}
+
+.amount {
+    width: 150px;
+}
+
+#output {
+    position: relative;
+    left: 18px;
+    top: -20px;
+    text-align: center;
+    border-top: black solid;
+    padding-top: 25px;
+    width: 350px;
+    height: 350px;
+    float:left;
+}
+
+i {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+i:hover {
+    transform: scale(1.15);
+    transition: 0.3s;
+}
+
+img:hover {
+    transform: scale(1.15);
+    transition: 0.3s;
+}
+
+form {
+    display: grid;
+}
+
+.nextBuy {
+    position: relative;
+    top: -45px;
+    left: 68px;
+}
+
+.comment {
+    position: relative;
+    top: -50px;
+}
+
+input[type=checkbox] {
+    transform: scale(1.5);
 }
